chore: change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ant-design-solid/icons",
+  "name": "@solid-antd/icons",
   "version": "0.1.5",
   "description": "Ant Design Icons for Solid",
   "main": "index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sutras/ant-design-solid-icons.git"
+    "url": "git+https://github.com/sutras/solid-antd-icons.git"
   },
   "keywords": [
     "icons",
@@ -27,20 +27,22 @@
   "author": "wuzhitao",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sutras/ant-design-solid-icons/issues"
+    "url": "https://github.com/sutras/solid-antd-icons/issues"
   },
-  "homepage": "https://github.com/sutras/ant-design-solid-icons#readme",
+  "homepage": "https://github.com/sutras/solid-antd-icons#readme",
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-typescript": "^7.24.7",
-    "@types/node": "^22.5.5",
-    "babel-preset-solid": "^1.8.22",
+    "@babel/core": "^7.25.9",
+    "@babel/preset-typescript": "^7.25.9",
+    "@types/node": "^22.7.9",
+    "babel-preset-solid": "^1.9.3",
+    "classnames": "^2.5.1",
     "glob": "^11.0.0",
     "prettier": "^3.3.3",
-    "solid-devtools": "^0.29.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vite-plugin-solid": "^2.8.2"
+    "solid-devtools": "^0.29.3",
+    "solid-js": "^1.9.3",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10",
+    "vite-plugin-solid": "^2.10.2"
   },
   "dependencies": {
     "@ant-design/colors": "^7.1.0",
@@ -48,6 +50,6 @@
   },
   "peerDependencies": {
     "classnames": "^2.5.1",
-    "solid-js": "^1.8.11"
+    "solid-js": "^1.9.3"
   }
 }
